[package]
name = "graviton"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graviton"
src = "src/main"

[dependencies]
cfg-if = "1"
env_logger = "0.11.8"
wgpu = "25.0.0"
log = "0.4"
winit = "0.29"
pollster = "0.4.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
